# erasure

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-iso.yml
erasure-data/: example.assets.csv  example.company.csv  example.operators.csv  example.settings.csv
erasure_ctl/: __init__.py  __main__.py
erasure_ctl/core/: asset_matcher.py  config.py  discovery.py  dmi.py  runtime.py
erasure_ctl/reports/: generator.py
erasure_ctl/reports/templates/: certificate.html  style.css
erasure_ctl/tui/: app.py
iso/: build.sh
iso/config/bootloaders/grub-efi/: grub.cfg
iso/config/bootloaders/grub-pc/: grub.cfg
iso/config/hooks/live/: 0100-install-erasure.hook.chroot  0200-enable-services.hook.chroot
iso/config/includes.chroot/etc/: erasure-live
iso/config/includes.chroot/etc/systemd/system/: erasure-mount-data.service  erasure.service
iso/config/package-lists/: erasure.list.chroot
scripts/: build_binary.py  create_usb.sh  generate_sample_report.py
tests/: test_asset_matcher.py  test_config.py  test_reports.py
