[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erasure-ctl"
version = "0.1.0"
description = "Secure disk erasure tool with SOC 2 compliant branded certificate generation"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Erasure Contributors" }]
keywords = ["disk-wipe", "data-erasure", "nist-800-88", "soc2", "certificate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0.0",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/gridworx/erasure"
Repository = "https://github.com/gridworx/erasure"
Issues = "https://github.com/gridworx/erasure/issues"

[project.scripts]
erasure-ctl = "erasure_ctl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["erasure_ctl"]
